fixed minor alignment issues

--- a/app/assets/stylesheets/components/_checklist.scss
+++ b/app/assets/stylesheets/components/_checklist.scss
@@ -149,6 +149,22 @@
   margin-bottom: 20px;
 }
 
+.check-list {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 8fr;
+  margin-bottom: 0px !important;
+  padding-bottom: 0px !important;
+  margin-top: 10px;
+}
+.form-check-input {
+  width: 1.2em !important;
+  height: 1.2em !important;
+  margin-top: 0px !important;
+  background-color: white !important;
+  color: black;
+}
+
 
 .form-check-input:checked {
   background-color: #568B57 !important;
@@ -225,7 +241,7 @@
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
-  bottom: 150px;
+  bottom: 90px;
   right: 40px;
   width: 50px;
   height: 50px;
@@ -238,7 +254,7 @@
   display: none;
   position: fixed;
   width: 300px;
-  bottom: 150px;
+  bottom: 90px;
   right: 40px;
   border: 0px solid #f1f1f1;
   z-index: 9;
